# ai-contact-backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  postman_collection.json  pyproject.toml  render.yaml
.github/workflows-pending/: README.md  ci.yml.txt
app/: main.py
app/api/: deps.py
app/api/v1/: contact.py  health.py  metrics.py
app/core/: config.py  errors.py  logging.py  middleware.py  rate_limit.py
app/db/: base.py  session.py
app/models/: contact.py
app/repositories/: contact_repo.py
app/schemas/: contact.py
app/services/: ai_service.py  contact_service.py  email_service.py
app/services/ai/: anthropic_provider.py  base.py  mock_provider.py  prompts.py
docker/: entrypoint.sh
docs/: ai-integration.md  api.md  architecture.md  ci-cd.md  code-review.md  compliance.md  prr.md
docs/adr/: 0001-record-architecture-decisions.md  0002-fastapi-async-stack.md  0003-ai-provider-abstraction.md  0004-background-tasks.md  0005-email-abstraction.md  README.md
docs/prr/: 2026-07-22-release.md
migrations/: env.py
migrations/versions/: 0001_create_contacts.py
tasks/: README.md
tasks/inbox/: TASK-001.md
tests/: conftest.py  test_ai_service.py  test_config.py  test_flow.py  test_rate_limit.py  test_validation.py
