[tool.poetry]
name = "ai-contact-backend"
version = "1.0.0"
description = "Backend-сервис формы обратной связи для лендинга разработчика с AI-обработкой обращений"
authors = ["Sergey Yagnov <jhdjam@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
asyncpg = "^0.30.0"
alembic = "^1.14.0"
structlog = "^24.4.0"
slowapi = "^0.1.9"
email-validator = "^2.2.0"
phonenumbers = "^8.13.0"
fastapi-mail = "^1.4.2"
httpx = "^0.27.0"
anthropic = "^0.39.0"
greenlet = "^3.1.0"
packaging = ">=21"  # транзитивная зависимость slowapi→limits; выносим явно, чтобы poetry export её не терял

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
ruff = "^0.7.0"
mypy = "^1.13.0"
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM"]
ignore = ["B008"]  # FastAPI Depends() в аргументах — идиома фреймворка

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
